--- a/frontend/src/app/components/user-card/user-card.html
+++ b/frontend/src/app/components/user-card/user-card.html
@@ -1,7 +1,12 @@
 <div class="card">
   <h3>{{ user().first_name }}</h3>
   <p>Edad: {{ user().age }}</p>
-  <img [src]="user().photos[0]?.url" alt="" />
+  <p>Distancia: {{ user().distance_km }} Km</p>
+  <p>Bio: {{ user().bio }}</p>
+
+  @if (user().photos[0]) {
+    <img [src]="user().photos[0].image" alt="" />
+  }
   <button (click)="onSwipe('DISLIKE')">❌</button>
   <button (click)="onSwipe('LIKE')">✅</button>
 </div>
