--- a/frontend/src/app/components/profile/profile-editor/profile-editor.html
+++ b/frontend/src/app/components/profile/profile-editor/profile-editor.html
@@ -2,17 +2,18 @@
   <p>✅ Usuario Actualizado!</p>
 }
 @if (profile(); as profile) {
+  <button (click)="updateLocation()">Actualizar Ubicación</button>
+
   @if (profile.photos; as fotos) {
     <ul>
       @for (foto of fotos; track foto.id) {
         <li>
           <img [src]="foto.image" alt="" />
           <button (click)="onDeletePhoto(foto.id)">❌</button>
+          <span>
+            {{ foto.caption }}
+          </span>
         </li>
-
-        <span>
-          {{ foto.caption }}
-        </span>
       }
     </ul>
   }
