--- a/frontend/src/app/features/social/matches/matches.html
+++ b/frontend/src/app/features/social/matches/matches.html
@@ -1,10 +1,7 @@
-<ul>
-  @for (match of matches(); track match.id) {
-    {{ match.other_user.first_name }}
+<aside>
+  <app-matches-list [matches]="matches()" />
+</aside>
 
-    <img [src]="match.other_user.photos[0]?.image" alt="" />
-    <button [routerLink]="['/chat', match.id]">Chatear</button>
-  } @empty {
-    <h2>Todavia no tienes matches!</h2>
-  }
-</ul>
+<main>
+  <router-outlet />
+</main>
