--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,3 +1,4 @@
 <app-header [appName]="title()" [matchesCount]="matchesCount()"></app-header>
 
 <router-outlet></router-outlet>
+<app-toast-container />
