añadido main photo en el user-service

--- a/frontend/src/app/features/profile/profile-info/profile-info.html
+++ b/frontend/src/app/features/profile/profile-info/profile-info.html
@@ -93,6 +93,7 @@
     <div class="profile-view">
       <!-- Card Principal -->
       <section class="profile-card">
+        <img [src]="mainPhoto()?.image" alt="" />
         <div class="profile-header">
           <h2>{{ user.first_name }}</h2>
           <span class="age-badge">{{ user.age }} años</span>
